--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed Mac OS X build (was broken because of const argv).
+
 2012-01-07 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added Doxygen support.
