--- a/liquidwar6/doc/dat-doxygen.texi
+++ b/liquidwar6/doc/dat-doxygen.texi
@@ -3,7 +3,7 @@
 @deftp {Struct} {lw6dat_warehouse_s}
 
     
-    
+Contains all recent messages sent to peers, and received from them, int fact this is a local database, think of it as a giant array, containing all messages. This is usefull both resend messages if one peer wants one and also to check wether informations are consistent and nobody is cheating. This structure is hiddent, casted to the real stuff internally if needed, so that other parts of the code don't rely on specific implementation.     
 @end deftp
 
 @defcv {Member} {lw6dat_warehouse_s} {dummy}
@@ -12,7 +12,7 @@
 @strong{Definition:} @code{int lw6dat_warehouse_s::dummy}
 
 
-        
+Dummy field, unused.         
         
 @end defcv
 
