--- a/liquidwar6/doc/p2p-doxygen.texi
+++ b/liquidwar6/doc/p2p-doxygen.texi
@@ -3,7 +3,7 @@
 @deftp {Struct} {lw6p2p_db_s}
 
     
-    
+Handler on a database connection, this must be used to pass order to store/retrieve persistent informations about peers.     
 @end deftp
 
 @defcv {Member} {lw6p2p_db_s} {id}
@@ -13,7 +13,7 @@
 
 
         
-        
+The first member, id, is the same as the internal _lw6p2p_db_t structure. The rest of it is hidden. The program will cast from lw6p2p_db_t to _lw6p2p_db_t internally.         
 @end defcv
 
 
@@ -22,7 +22,7 @@
 @deftp {Struct} {lw6p2p_entry_s}
 
     
-    
+This entry object matches as close as possible the corresponding (node) entry in the database.     
 @end deftp
 
 @defcv {Member} {lw6p2p_entry_s} {creation_timestamp}
@@ -31,7 +31,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::creation_timestamp}
 
 
-        
+Node creation timestamp.         
         
 @end defcv
 
@@ -41,7 +41,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::version[LW6P2P_VERSION_SIZE+1]}
 
 
-        
+Node version.         
         
 @end defcv
 
@@ -51,7 +51,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::codename[LW6P2P_CODENAME_SIZE+1]}
 
 
-        
+Node codename.         
         
 @end defcv
 
@@ -61,7 +61,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::stamp}
 
 
-        
+Node stamp.         
         
 @end defcv
 
@@ -71,7 +71,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::id[LW6P2P_ID_SIZE+1]}
 
 
-        
+Node id, 64-bit integer as an hexa string.         
         
 @end defcv
 
@@ -81,7 +81,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::url[LW6P2P_URL_SIZE+1]}
 
 
-        
+Node URL, the public URL it displays to others.         
         
 @end defcv
 
@@ -91,7 +91,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::title[LW6P2P_TITLE_SIZE+1]}
 
 
-        
+Node title, the short readable name for the node.         
         
 @end defcv
 
@@ -101,7 +101,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::description[LW6P2P_DESCRIPTION_SIZE+1]}
 
 
-        
+Node description, mode details about this node.         
         
 @end defcv
 
@@ -111,7 +111,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::has_password}
 
 
-        
+Wether it requires a password or not.         
         
 @end defcv
 
@@ -121,7 +121,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::bench}
 
 
-        
+Node bench, reflects how powerfull it is.         
         
 @end defcv
 
@@ -131,7 +131,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::open_relay}
 
 
-        
+Wether this node acts as an open relay or not.         
         
 @end defcv
 
@@ -141,7 +141,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::community_id[LW6P2P_COMMUNITY_ID_SIZE+1]}
 
 
-        
+Community id, 64-bit integer as an hexa string.         
         
 @end defcv
 
@@ -151,7 +151,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::round}
 
 
-        
+Current round.         
         
 @end defcv
 
@@ -161,7 +161,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::level[LW6P2P_LEVEL_SIZE+1]}
 
 
-        
+Level used.         
         
 @end defcv
 
@@ -171,7 +171,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::required_bench}
 
 
-        
+Required bench to connect to this community.         
         
 @end defcv
 
@@ -181,7 +181,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::nb_colors}
 
 
-        
+Number of colors playing.         
         
 @end defcv
 
@@ -191,7 +191,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::max_nb_colors}
 
 
-        
+Maximum number of colors allowed to play.         
         
 @end defcv
 
@@ -201,7 +201,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::nb_cursors}
 
 
-        
+Number of cursors playing.         
         
 @end defcv
 
@@ -211,7 +211,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::max_nb_cursors}
 
 
-        
+Maximum number of cursors allowed to play.         
         
 @end defcv
 
@@ -221,7 +221,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::nb_nodes}
 
 
-        
+Number of nodes playing.         
         
 @end defcv
 
@@ -231,7 +231,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::max_nb_nodes}
 
 
-        
+Maximum number of nodes playing.         
         
 @end defcv
 
@@ -241,7 +241,7 @@
 @strong{Definition:} @code{char lw6p2p_entry_s::ip[LW6P2P_IP_SIZE+1]}
 
 
-        
+IP addess of node.         
         
 @end defcv
 
@@ -251,7 +251,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::port}
 
 
-        
+IP port of node.         
         
 @end defcv
 
@@ -261,7 +261,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::last_ping_timestamp}
 
 
-        
+Last time this node has been pinged.         
         
 @end defcv
 
@@ -271,7 +271,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::ping_delay_msec}
 
 
-        
+Ping delay, in milliseconds.         
         
 @end defcv
 
@@ -281,7 +281,7 @@
 @strong{Definition:} @code{int lw6p2p_entry_s::available}
 
 
-        
+Wether this node is ready to accept connections.         
         
 @end defcv
 
@@ -291,7 +291,7 @@
 @deftp {Struct} {lw6p2p_node_s}
 
     
-    
+Node object, the main network object, this one will encaspulate everything else, the node can connect to other peers, listen on the network, it's the high-level interface.     
 @end deftp
 
 @defcv {Member} {lw6p2p_node_s} {id}
@@ -301,7 +301,7 @@
 
 
         
-        
+The first member, id, is the same as the internal _lw6p2p_node_t structure. The rest of it is hidden. The program will cast from lw6p2p_node_t to _lw6p2p_node_t internally.         
 @end defcv
 
 
