Fully documented dsp/dsp.h.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-09 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fully documented dsp/dsp.h.
+
 2012-01-08 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fully documented ker/ker.h.
