Documented nod/nod.h

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,6 +1,6 @@
 2012-01-09 : Christian Mauduit <ufoot@ufoot.org>
 
-	* Fully documented dsp/dsp.h.
+	* Fully documented dsp/dsp.h and nod/nod.h.
 
 2012-01-08 : Christian Mauduit <ufoot@ufoot.org>
 
