--- a/liquidwar6/doc/bot-doxygen.texi
+++ b/liquidwar6/doc/bot-doxygen.texi
@@ -3,7 +3,7 @@
 @deftp {Struct} {lw6bot_backend_s}
 
     
-The bot bakckend is the first argument passed to any bot function, it contains reference to all the functions which can be used as well as a pointer on associated data. In OO, this would just be an object, with members and methods, using polymorphism through opaque pointers.     
+The bot backend is the first argument passed to any bot function, it contains reference to all the functions which can be used as well as a pointer on associated data. In OO, this would just be an object, with members and methods, using polymorphism through opaque pointers.     
 @end deftp
 
 @defcv {Member} {lw6bot_backend_s} {dl_handle}
