--- a/liquidwar6/doc/msg-doxygen.texi
+++ b/liquidwar6/doc/msg-doxygen.texi
@@ -3,7 +3,7 @@
 @deftp {Struct} {lw6msg_word_s}
 
     
-    
+This structure is used to retrieve words from messages. We use a structure here with a fixed sized buffer and a len member, this is to avoid mallocating too often when parsing.     
 @end deftp
 
 @defcv {Member} {lw6msg_word_s} {len}
@@ -12,7 +12,7 @@
 @strong{Definition:} @code{int lw6msg_word_s::len}
 
 
-        
+Length of word, in bytes.         
         
 @end defcv
 
@@ -23,7 +23,7 @@
 
 
         
-        
+Word data, containing a 0 char at the end, so it is safe to call standard C string functions on it.         
 @end defcv
 
 
