--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-10 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed nod_dyninfo memory management bug.
+
 2012-01-09 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Module lw6dat now uses 64-bit seq.
